# ROSJECT_CPP_ROBOTICS

./: .gitignore  README.md
cpp_basics_project/: CMakeLists.txt  package.xml
cpp_basics_project/include/cpp_basics_project/: robot_interface_class.hpp
cpp_basics_project/src/: robot_control_classed.cpp  robot_control_noclass.cpp  robot_interface_class.cpp  robot_interface_main.cpp
